# common-tools

./: .gitignore  README.md  _run.sh  main.py  pyproject.toml  requirements.txt
.poetry/: pyproject.toml
leetcode/basic/: 0907_tme_binary_search0.py  1106_huawei_2.py  flip_sum.py  heap.py
leetcode/cv/: scale_dot_product_attention.py
projects/: README.md
projects/20240701-templates/: latex_template_full.tex  latex_template_simple.tex
projects/20240801-nips_rebuttal/: 2024-08-03_R_PXUu.tex  2024-08-03_R_all.tex  20240801_R_all.tex  20240805_1_R_all.tex  20240805_R_all.tex  20240806.tex  20240806_1.tex  20240806_2.tex  20240807.tex  rebuttal.sty
projects/20240801-nips_rebuttal/converted_md/: 2024-08-02_R_kh4z.md  2024-08-03_R_PXUu.md  2024-08-03_all.md  2024-08-07_all.md
projects/20241125_trajectory_rep/cn/: cn.md  code.md  paper.md
projects/20241125_trajectory_rep/en/: code.tex  paper.tex
projects/20241125_trajectory_rep/latex/: cn.tex  (+1 more)
projects/20241130-专利初稿/: 1_thesis.md  README.md
scripts/clash_proxy/: .clashrc  install_clashrc.sh  proxy-toggle.bat  unset_proxy.sh
scripts/conda/: .win_bash_condarc  bash_profile  cudarc
scripts/cuda_setting/: .cudarc
scripts/env/: .set_clash.sh
scripts/latex_workshop/: README.md
scripts/mujoco/: .mujocorc
scripts/proxy/: .clashrc  .set_clash.bat  .set_clash.sh  unset_proxy.sh
scripts/scholar_scraper/: README.md  main.py
scripts/shader/: s.glsl  s1.glsl  s2.glsl
scripts/system_setting/: cuda_installer.sh  install_libboost.sh  install_ubuntu_software.sh  switch_apt_source.sh
src/tools/: compress_folder.py
src/universe_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: compress_folder.py  crop_pdf_white.py  dataset_vis_grid.py  h_concat_videos.py  pyscenedetect_clip.py
tools/biaoqingbao/: download.py
tools/exp_figs/: diffshow.py
tools/images/: concat_gui.py  concat_v_h.py  create_grid.py  cut_white.py  delete_broken.py
tools/videos/: README.md  create_grid.py  create_grid_batch.py  pyscenedetect_clip.py  split_equal_ffmpeg.py
(+41 files in other folders)
