[project]
name = "paper-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.1",
    "numpy==1.26.0",
    "opencv-python",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyaudio>=0.2.13",
    "pyxll>=5.10.1",
    "ray>=2.44.1",
    "requests>=2.32.3",
    "scenedetect[opencv]>=0.6.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
