[project]
name = "Tools"
version = "0.1.0"
description = ""
authors = [
    {name = "lithiumice",email = "fthualinliang@mail.scut.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
